<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.tiger.quicknews.activity.MainActivity">
    
    <include
        android:id="@+id/include1"
        layout="@layout/common_title_bar" />
    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/include1"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/checkUpdate"
            style="@style/my_itme"
            android:layout_width="match_parent"
            android:layout_toLeftOf="@+id/update_progress"
            android:drawableRight="@null"
            android:text="@string/left_check_update" />

        <ProgressBar
            android:id="@+id/update_progress"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:indeterminateOnly="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/newest"
            style="@style/my_itme"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:drawableRight="@null"
            android:text="@string/isnewest"
            android:textColor="@color/main_red"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/separator" />

    <TextView
        android:id="@+id/restart"
        style="@style/my_itme"
        android:visibility="visible"
        android:text="@string/left_restart" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="visible"
        android:background="@drawable/separator" />

</LinearLayout>
    
</RelativeLayout>

